# zetronix-outreach-emailer

./: .env.example  README.md  email_template.json  pyproject.toml  requirements.txt  setup.py
templates/: professional_outreach.html
tests/: conftest.py  test_models.py  test_openai_client.py
zetronix_emailer/: __init__.py  campaign.py  cli.py  config.py  email_sender.py  logging_utils.py  models.py  openai_client.py  sheets_client.py
